Bug 430705 - Location of split is no longer remembered if manually changed
Summary: Location of split is no longer remembered if manually changed
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: split view (other bugs)
Version First Reported In: 20.12.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-12-22 12:57 UTC by Alexander Kernozhitsky
Modified: 2025-10-31 13:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Kernozhitsky 2020-12-22 12:57:54 UTC
STEPS TO REPRODUCE
1. Turn the split mode on and change the split position
2. Turn the split mode off
3. Turn the split mode on again

OBSERVED RESULT

The split positions at steps 1 and 3 are different.

EXPECTED RESULT

The split positions at steps 1 and 3 are must be the same.

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.2
Kernel Version: 5.9.0-5-amd64
OS Type: 64-bit

ADDITIONAL INFORMATION

This is a regression since Dolphin 20.08. I notice the bug often enough, as I disable the split mode and re-enable it again to make the contents of both panels the same.
Comment 1 Bug Janitor Service 2025-10-29 20:19:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1082
Comment 2 Méven 2025-10-31 13:59:27 UTC
Git commit 8d44699fa48bc4028b2a7fab4af77ad91f899956 by Méven Car, on behalf of Rafał Lichwała.
Committed on 31/10/2025 at 10:19.
Pushed by meven into branch 'master'.

dolphintabpage: save and restore splitter position

This commit changes version number for save/restore tab state,
because format has changed - m_splitterLastPosition is now also saved/restored

M  +11   -3    src/dolphintabpage.cpp
M  +6    -1    src/dolphintabpage.h

https://invent.kde.org/system/dolphin/-/commit/8d44699fa48bc4028b2a7fab4af77ad91f899956