dolphintabpage: save and restore splitter position

This commit changes version number for save/restore tab state,
because format has changed - m_splitterLastPosition is now also saved/restored

BUG: 430705